--- a/backend/weather-api/src/main/resources/static/styles.css
+++ b/backend/weather-api/src/main/resources/static/styles.css
@@ -66,7 +66,7 @@ body {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  min-width: 0; /* Prevent overflow in flexbox */
+  min-width: 0;
   overflow: hidden;
   box-sizing: border-box;
 }
@@ -145,18 +145,6 @@ body {
   font-weight: 600;
   font-size: 1.2rem;
 }
-
-/*!* Day label *!*/
-/*.date-label {*/
-/*  width: 100%;*/
-/*  text-align: left;*/
-/*  font-weight: bold;*/
-/*  padding: 5px 1px 5px;*/
-/*  font-size: 1rem;*/
-/*  color: #444;*/
-/*  align-items: center;*/
-/*  justify-content: center;*/
-/*}*/
 
 /* Dropdown styles */
 #city-dropdown {
